Fix sticky nav on mobile

--- a/blocks/sticky-navigation/sticky-navigation.css
+++ b/blocks/sticky-navigation/sticky-navigation.css
@@ -113,7 +113,6 @@
 
   .sticky-navigation {
     border-bottom: 1px solid #dedede;
-    min-height: 56px;
   }
 
   .sticky-navigation .menu-with-button {
